chore: Adds some demos